feat: bootstrap application with create-next-app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@oktatas-ai/oktatas-ai",
   "version": "0.0.0",
-  "private": true
+  "private": true,
+  "workspaces": [
+    "apps/oktatas-ai-procedural-curriculum"
+  ]
 }
