--- a/apps/oktatas-ai-procedural-curriculum/package.json
+++ b/apps/oktatas-ai-procedural-curriculum/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^0.0.23",
+    "@ai-sdk/openai": "^0.0.58",
+    "ai": "^3.3.28",
+    "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
