--- a/apps/oktatas-ai-procedural-curriculum/package.json
+++ b/apps/oktatas-ai-procedural-curriculum/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^0.0.23",
     "@ai-sdk/openai": "^0.0.58",
+    "@radix-ui/react-icons": "^1.3.0",
     "ai": "^3.3.28",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5",
